<resources>
    <string name="app_name">Broadway</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="demo_title_basic">Basic</string>
    <string name="demo_title_basic2">Basic(Title Offset Auto Center)</string>
    <string name="demo_title_smart_indicator">Smart Indicator</string>
    <string name="demo_title_distribute_evenly">Distribute Evenly</string>
    <string name="demo_title_always_in_center">Always In Center</string>
    <string name="demo_title_custom_tab_text">Custom Tab Text</string>
    <string name="demo_title_custom_tab_margin">Custom Tab Margin (since 1.2~)</string>
    <string name="demo_title_custom_tab_colors">Custom Tab Colors</string>
    <string name="demo_title_custom_tab_icons1">Custom Tab Icons 1</string>
    <string name="demo_title_custom_tab_icons2">Custom Tab Icons 2 (since 1.2~)</string>
    <string name="demo_title_custom_tab_icon_and_text">Custom Tab Icon and Text</string>
    <string name="demo_title_custom_tab_icon_and_notification_mark">Custom Tab Icon and Notification Mark</string>
    <string name="demo_title_indicator_trick1">Indicator Thickness Trick 1</string>
    <string name="demo_title_indicator_trick2">Indicator Thickness Trick 2</string>
    <string name="demo_title_right_to_left">RTL support</string>
    <string name="demo_title_advanced_medium">Advanced: Like a Medium Tag (since 1.2~)</string>

    <string name="demo_tab_1">Cupcake</string>
    <string name="demo_tab_2">Donut</string>
    <string name="demo_tab_3">Eclair</string>
    <string name="demo_tab_4">Froyo</string>
    <string name="demo_tab_5">Gingerbread</string>
    <string name="demo_tab_6">Honeycomb</string>
    <string name="demo_tab_7">Ice Cream Sandwich</string>
    <string name="demo_tab_8">Jelly Bean</string>
    <string name="demo_tab_9">KitKat</string>
    <string name="demo_tab_10">Lollipop</string>

    <string name="demo_tab_no_title">No Title</string>
    <string name="demo_tab_like_a_medium_top">Top</string>
    <string name="demo_tab_like_a_medium_latest">Latest</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>

    <string name="label_state">State</string>
    <string name="disconnected">Disconnected</string>
    <string name="label_data">Data</string>
    <string name="no_data">No data</string>
    <string name="label_device_address">address</string>
    <string name="connected">Connected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="error_bluetooth_not_supported1">Bluetooth not supported</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="_812345">#812345</string>
    <string name="sfo">SFO</string>
    <string name="maa">MAA</string>
    <string name="easy_solutions">Easy Solutions</string>
    <string name="serial">Serial :</string>
    <string name="_110115150215">110115150215</string>
    <string name="data_not_uploaded">Data Not Uploaded</string>
    <string name="alert">alert</string>
    <string name="status">Status :</string>
    <string name="leftarrow"><![CDATA[<]]></string>
    <string name="rightarrow"><![CDATA[>]]></string>
    <string name="pdf">PDF</string>
    <string name="jpeg">JPEG</string>


    <!---Facebook App id-->
    <string name="facebook_app_id">148445628974458</string>
    <string name="fb_login_protocol_scheme">fb189953571452011</string>
    <string name="btn_logout_from_google">Logout</string>
    <string name="btn_revoke_access">Revoke access</string>
    <string name="loading" />


    <string name="label_device_name">Device Name:</string>


    <string name="label_notified">Data Received : </string>
    <string name="label_data_received">Data: </string>
    <string name="label_data_rate">Data Rate: </string>
    <string name="label_Bps">Bps</string>

    <string name="label_error_data">Error: </string>
    <string name="label_error_count">Count: </string>

    <string name="text_RxTx_Split">-----------------------------------------</string>
    <string name="label_data_sent">Data Sent : </string>

    <string name="label_delay">Delay : </string>
    <string name="bit10">10</string>
    <string name="text_ms">ms</string>
    <string name="text_delay_range">(0~9999)</string>

    <string name="label_input">Input:</string>

    <string name="label_hex">0x</string>
    <string name="label_input_hint">(0~9,A~F)</string>

    <string name="label_send_pkg_repeat">Times:</string>

    <string name="btn_send">Send</string>
    <string name="btn_stop">Stop</string>

    <string name="text_repeat">Repeat</string>

    <string name="text_counter_def">0</string>


    <string name="hello_world">Hello world!</string>


    <string name="fb_login_text">Sign in with facebook</string>
    <string name="twitter_login_text">Sign in with Twitter</string>
    <string name="google_login_text">Sign in with Google</string>
    <string name="or">or</string>

    <!-- hints -->
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="username_email_hint">Username/Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="forgot">forgot?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">No account yet? Create one</string>
    <string name="sign_up_button">Sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_smart_login">SmartLoginActivity</string>

    <!--<string name="facebook_app_id">221623114699507</string>-->
    <string name="config_data">config</string>

    <string name="network_error">Something went wrong. Please check Network Connection.</string>
    <string name="username_error">Please enter your username</string>
    <string name="email_error">Please enter your email</string>
    <string name="password_error">Please choose a password</string>
    <string name="no_email_error">You need an email to sign up</string>
    <string name="invalid_email_error">Please enter a valid email</string>

    <string name="loading_holder">Please wait…</string>
    <string name="logging_holder">Logging in…</string>
    <string name="getting_data">Getting User Info…</string>
    <string name="password_mismatch">Make sure your passwords match</string>
    <string name="login_failed">Login failed! Try again!</string>
    <string name="user_exists">user exists</string>
    <string name="refresh">Refresh</string>
    <string name="qpp_support">Supported</string>
    <string name="qpp_not_support">Not Supported</string>
    <string name="title_devices">Logger</string>
    <string name="title_activity_qpp">BLoggers</string>

    <string name="label_version">Version No</string>
    <string name="scan">Scan</string>
    <string name="text_trans_format">Translate</string>
    <string name="scanning">Scanning...</string>
    <string name="select_device">Select a device</string>
    <string name="start_scanning">Start Scan</string>
    <string name="connect_timeout">connection timed out</string>
    <string name="btn_sure">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="ask_permission">Permissions</string>
    <string name="lined_num">Lined Num</string>
    <string name="line_success">Successful</string>
    <string name="line_disconnect">Disconnected</string>
    <string name="discovered_devices">Devices Discovered</string>
    <string name="button_scan">SCAN</string>
    <string name="bt_conn_established">Connection is Established</string>
    <string name="bt_conn_established_inact">Not est</string>
    <string name="device_list_empty">No devices found</string>
    <string name="device_press">Select Device</string>
    <string name="device_name">Device :</string>
    <string name="device_address">Address</string>
    <string name="device_services">Services</string>


</resources>
