<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom">

    </item>
    <item
        android:id="@+id/report"
        android:title="Export As"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/PDF"
                    android:title="@string/pdf"/>
                <item
                    android:id="@+id/jpeg"
                    android:title="@string/jpeg"/>

            </group>

        </menu>

    </item>
    <item
        android:id="@+id/action_night"
        android:title="@string/menu_night_mode"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_night_mode_system"
                    android:title="@string/menu_night_mode_system" />
                <item
                    android:id="@+id/menu_night_mode_day"
                    android:title="@string/menu_night_mode_day" />
                <item
                    android:id="@+id/menu_night_mode_night"
                    android:title="@string/menu_night_mode_night" />
                <item
                    android:id="@+id/menu_night_mode_auto"
                    android:title="@string/menu_night_mode_auto" />
            </group>
        </menu>
    </item>

</menu>