<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    >
    <!--Display Device Name:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_name"
            android:textSize="18sp"
            />
        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_device_name"
            android:textSize="18sp"
            />
    </LinearLayout>
    <!--Display Device Address:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="18sp"
            />
        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_device_address"
            android:textSize="18sp"
            />
    </LinearLayout>
    <!--Display Debug Service:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp"
            />
        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_connection_state"
            android:text="@string/qpp_not_support"
            android:textSize="18sp"
            />
    </LinearLayout>
    <!--Display Data Received-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_notified"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <!--Display Data:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data_received"
            android:textSize="18sp"
            />
        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/text_qpp_notify"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_margin="0dp"
            android:textSize="18sp"
            />
    </LinearLayout>
    <!--Display Data Rate:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data_rate"
            android:textSize="18sp"
            />
        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_qpp_data_rate"
            android:textSize="18sp"
            />
    </LinearLayout>
    <!--Display Data Sent:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data_sent"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <!--Display Input:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_input"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hex"
            android:textSize="18sp"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="0.64"
            android:id="@+id/edit_send"

            android:ems="10"
            android:hint="@string/label_input_hint"
            android:inputType="text"
            android:textSize="18sp"
            />
    </LinearLayout>
    <!--Display Repeat/Hex-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_repeat"
            android:text="@string/text_repeat"
            android:textSize="18sp"
            />
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_repeat_counter"
            android:text="@string/label_send_pkg_repeat"
            android:textSize="18sp"
            android:visibility="invisible"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_trans_format"
            android:text="@string/text_trans_format"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_repeat_counter"
            android:layout_margin="0dp"
            android:text="@string/text_counter_def"
            android:textSize="18sp"
            android:visibility="invisible"
            />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <!--Display Button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_qpp_text_send"
            android:gravity="center"
            android:text="@string/btn_send"
            android:textSize="12sp"
            />
        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--Display APP Version-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/qpp_version"
        android:text="@string/label_version"
        android:layout_gravity="center|center_horizontal|center_vertical|bottom"
        android:gravity="center|center_horizontal"
        android:textSize="12sp"/>
</LinearLayout>