<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/userNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username_hint"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/repeatPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/repeatPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!--<Button-->
    <!--android:id="@+id/user_signup_button"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/primary_color"-->
    <!--android:textColor="@color/white"-->
    <!--android:text="@string/sign_up_button" />-->

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/user_signup_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button" />

</LinearLayout>